@@ -6,6 +6,7 @@ BUG: Ticket#662 - Ensure TForm to properly encode the ampersand in action URL (Q
 BUG: Ticket#666 - TActiveRecord::deleteAll() method always requires a criteria or null parameter (Qiang)
 BUG: Ticket#670 - TDatePicker: Year Issue (Christophe)
 ENH: Ticket#667 - Added TFeedService.ContentType property (Qiang)
+ENH: Ticket#577 - Added image button support for TPager (Qiang)
 ENH: Added THead requirement check (Qiang)
 
 Version 3.1.0 July 2, 2007
